# digitalmentorshiplog

./: API_DOCUMENTATION.md  CLAUDE.md  Digital Mentorship Log (DML) – Development Guide.md  FRONTEND_ROADMAP.md  RBAC_Issues.md  SUPERVISOR_SPECIALIST_IMPLEMENTATION.md  VERCEL_DEPLOYMENT_FIXES.md  VERCEL_ENV_SETUP.md  todo.md  vercel.json
api/: index.py  requirements.txt
backend/: .coveragerc  .env.example  .gitignore  API_DOCUMENTATION.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.in
backend/alembic/: env.py
backend/alembic/versions/: 086fdd5a61a2_add_other_specify_and_attachment_types_.py  453d4e03b9a5_add_lga_field_to_facilities_table.py  64353edf8841_add_supervisor_and_specialist_system.py  8b53bc9d0cff_add_unified_notification_system.py  9fdd958cc7ea_add_rejection_fields_to_mentorship_logs.py  aefcdb910500_update_models_to_match_ace2_pdf_form.py  d7e753b3f250_increase_attachment_file_name_column_.py  fd1bc4e8584a_initial_migration_with_all_models.py
backend/app/: __init__.py  config.py  constants.py  database.py  dependencies.py  main.py  models.py  schemas.py  seed_facilities.py  storage.py
backend/app/middleware/: __init__.py
backend/app/routers/: __init__.py  attachments.py  auth.py  comments.py  constants.py  facilities.py  follow_ups.py  mentorship_logs.py  notifications.py  reports.py  users.py
backend/app/seed_data/: facilities.json
backend/app/services/: __init__.py
backend/app/utils/: __init__.py  security.py
backend/tests/: __init__.py  helpers.py  test_auth.py  test_database.py  test_dependencies.py  test_facilities.py  test_follow_ups.py  test_mentorship_logs.py  test_models.py  test_reports.py  test_users.py
frontend/: .env.example  .gitignore  ERROR_HANDLING_GUIDE.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/facilities/: page.tsx
frontend/app/follow-ups/: page.tsx
frontend/app/mentorship-logs/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/users/: page.tsx
frontend/components/auth/: ProtectedRoute.tsx
frontend/components/errors/: ErrorBoundary.tsx
frontend/components/layouts/: DashboardLayout.tsx
frontend/components/logs/: CommentsSection.tsx  RejectionAlert.tsx
frontend/components/notifications/: NotificationBell.tsx  NotificationDropdown.tsx
frontend/components/ui/: Toast.tsx
frontend/lib/api/: attachments.service.ts  auth.service.ts  client.ts  comments.service.ts  constants.service.ts  facilities.service.ts  follow-ups.service.ts  mentorship-logs.service.ts  notifications.service.ts  reports.service.ts  users.service.ts
frontend/lib/constants/: facility-types.ts  facility_seed_data.csv  facility_seed_data.xlsx  (+3 more)
frontend/styles/: globals.css
frontend/types/: index.ts
(+19 files in other folders)
